fixed spotlights spacing *

--- a/homepage.css
+++ b/homepage.css
@@ -110,7 +110,7 @@ a {
 
 #spotlight {
   width: auto;
-  max-width: 1100px;
+  max-width: 1190px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
@@ -471,4 +471,23 @@ a {
   #info-p, .spotlight-p, .event-p {
     font-size: 16px;
   }
+
+@media only screen and (min-width: 1190px) {
+  
+  #main-spotlights {
+    margin-right: 0;
+  }
+  
+  #small-spotlights {
+    margin-left: 0;
+  }
+  
+  #main-spotlight {
+    margin-right: 45px;
+  }
+
+  .spotlight {
+    margin-left: 45px;
+  }
+}
 }
